Ctrl+F search in collapsed docstring fixed

--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -26,8 +26,6 @@ body.dark{
 .optionList_container {
   max-height: calc(100vh - 44px);
   overflow: scroll;
-  overflow-x: hidden;
-  scrollbar-width: none;
 }
 
 .right_side {
